# paste

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/routers/: paste.py
app/services/: image_utils.py  paste_service.py
tests/: __init__.py  test_paste.py
